--- a/index.css
+++ b/index.css
@@ -5,10 +5,11 @@ body{
     top: 0;
     height: 100vh;
     width: 100%;
-    background: linear-gradient(white,rgba(0, 0, 0, 0.658),rgb(0, 0, 0));
+    background: linear-gradient(rgb(0, 0, 0),rgba(0, 0, 0, 0.658),rgb(255, 255, 255));
 }
 footer img{
     position: absolute;
+    z-index: 2;
     width: 100vw;
     height: 30vh;
     top: 70vh;
@@ -20,6 +21,7 @@ footer img{
 }
 
 .character1 img{
+    z-index: 2;
     position: absolute;
     height: 300px;
     left: 300px;
@@ -51,12 +53,14 @@ footer img{
     &:nth-child(4){
         width: 200px;
         height: 330px;
+        left: 200px;
         bottom: 10px;
         animation: none;
         display: none;
     }
 }
 .character2 img{
+    z-index: 2;
     position: absolute;
     filter: drop-shadow(5px 5px 27px white);
     height: 300px;
@@ -256,11 +260,12 @@ footer img{
     }
 }
 .reset button{
+    z-index: 2;
     position: absolute;
     left: 48%;
     bottom: 170px;
-    height: 40px;
-    width: 100px;
+    height: 60px;
+    width: 120px;
     background: none;
     border: 3px solid white;
     cursor: pointer;
@@ -284,22 +289,16 @@ footer img{
     margin: 0;
     height: 100vh;
     width: 100%;
-    background: rgba(0, 0, 0, 0.808);
-    display: none;
-    
+    background: black;
+    display:none;
+    z-index: 1;
 }
-.final img{
-    position: absolute;
-    top: 0;
-    width: 30vw;
-    height: auto;
-    left: 35%;
-}
+
 .final h1{
     position: absolute;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 150px;
+    font-size: 120px;
     color: white;
-    top: 60vh;
+    top: 50vh;
     left: 500px;
 }
